WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
275792
[Tools] Don't rely on WTF::Vector::data() being nullptr when empty
https://bugs.webkit.org/show_bug.cgi?id=275792
Summary
[Tools] Don't rely on WTF::Vector::data() being nullptr when empty
David Kilzer (:ddkilzer)
Reported
2024-06-23 10:29:27 PDT
Don't rely on WTF::Vector::data() being nullptr when empty. Alex Christensen noticed this after the fix for: REGRESSION (
279702@main
): [ iOS ] fast/shadow-dom/touch-event-ios.html is constantly crashing. <
https://bugs.webkit.org/show_bug.cgi?id=275752
> <
rdar://130217217
> <
https://commits.webkit.org/280269@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-23 10:29:47 PDT
<
rdar://problem/130372890
>
David Kilzer (:ddkilzer)
Comment 2
2024-06-23 10:37:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30095
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug