[Tools] Don't rely on WTF::Vector::data() being nullptr when empty <https://bugs.webkit.org/show_bug.cgi?id=275792> <rdar://130372890>

Reviewed by Alex Christensen.

WTF::Vector::data() can return a non-nullptr value if it is expanded and
then shrunk.

* Tools/TestWebKitAPI/Tests/WTF/Vector.cpp:
(TestWebKitAPI::TEST(WTF_Vector, Basic)):
(TestWebKitAPI::TEST(WTF_Vector, ZeroSize)):
- Add more tests demonstrating this behavior, including
  WTF::Vector::span() tests.

* Tools/WebKitTestRunner/ios/HIDEventGenerator.mm:
(-[HIDEventGenerator touchDown:touchCount:]):
(-[HIDEventGenerator liftUp:touchCount:]):
(-[HIDEventGenerator moveToPoints:touchCount:duration:]):
- Call WTF::Vector::isEmpty() to determine if nullptr should be used for
  the CGPoint* argument.

Canonical link: https://commits.webkit.org/280359@main